tests/ui/attributes/attribute-on-wrong-item-inline-repr.stderr
error: the `inline` attribute cannot be used on statements
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:7:7
   |
LL |     #[inline]
   |       ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error[E0539]: malformed `inline` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:12:5
   |
LL |     #[inline(XYZ)]
   |     ^^^^^^^^^---^^
   |              |
   |              valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[inline(XYZ)]
LL +     #[inline(always)]
   |
LL -     #[inline(XYZ)]
LL +     #[inline(never)]
   |
LL -     #[inline(XYZ)]
LL +     #[inline]
   |

error: the `inline` attribute cannot be used on statements
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:12:7
   |
LL |     #[inline(XYZ)]
   |       ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error[E0539]: malformed `repr` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:17:5
   |
LL |     #[repr(nothing)]
   |     ^^^^^^^-------^^
   |            |
   |            valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:21:5
   |
LL |     #[repr(something_not_real)]
   |     ^^^^^^^------------------^^
   |            |
   |            valid arguments are `align`, `packed`, `Rust`, `C`, `simd`, `transparent`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize` or `usize`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:27:5
   |
LL |     #[repr]
   |     ^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `inline` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:33:5
   |
LL |     #[inline(ABC)]
   |     ^^^^^^^^^---^^
   |              |
   |              valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[inline(ABC)]
LL +     #[inline(always)]
   |
LL -     #[inline(ABC)]
LL +     #[inline(never)]
   |
LL -     #[inline(ABC)]
LL +     #[inline]
   |

error: the `inline` attribute cannot be used on expressions
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:33:7
   |
LL |     #[inline(ABC)]
   |       ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error[E0539]: malformed `repr` attribute input
  --> $DIR/attribute-on-wrong-item-inline-repr.rs:38:14
   |
LL |     let _z = #[repr] 1;
   |              ^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0539`.
